--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,19 @@
-cmake_minimum_required(VERSION 3.28)
-project(disp_opt CUDA)
+cmake_minimum_required(VERSION 3.16)
+project(disp_opt CXX CUDA)
 
-set(CMAKE_CUDA_STANDARD 17)
+set(CMAKE_CUDA_STANDARD 14)
+enable_language(CUDA)
 #opencv
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
-
-add_library(disp_opt SHARED disp_optimize_icgn.cu
-        disp_optimize_icgn_cpu.cpp
-        disp_optimize_icgn_cpu.h)
+message("OpenCV_INCLUDE_DIRS: " ${OpenCV_INCLUDE_DIRS})
+file(GLOB ${PROJECT_NAME}_SRC_LST 
+        ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/*.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/*.cu
+        ${CMAKE_CURRENT_SOURCE_DIR}/*.cuh)
+add_executable(disp_opt ${${PROJECT_NAME}_SRC_LST})
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
 message("OpenCV_LIBS: " ${OpenCV_LIBS})
 set_target_properties(disp_opt PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
-add_executable(disp_opt_exe main.cu)
-target_link_libraries(disp_opt_exe disp_opt ${OpenCV_LIBS})
